--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -45,10 +45,10 @@ a:hover {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-	height: 600px;
+	height: 100vh;
 }
 #headline-row {
-	margin-top: 130px;
+	margin-top: 30vh;
 }
 #headline {
 	color: #ffffff;
@@ -217,10 +217,6 @@ a:hover {
 #logo {
 	width: 80px;
 }
-#headline-row {
-	margin-top: 160px;
-}
-
 #headline {
 	font-size: 38px;
 }
@@ -252,9 +248,6 @@ button:focus {border:none;outline: none;}
 #logo {
 	width: 90px;
 }
-#headline-row {
-	margin-top: 200px;
-}
 #headline {
 	font-size: 40px;
 }
@@ -281,15 +274,12 @@ button:focus {border:none;outline: none;}
 #logo {
 	width: 100px;
 }
-#headline-row {
-	margin-top: 250px;
-}
 #headline {
 	font-size: 48px;
 }
 #about-container {
-	padding-left: 30vh;
-	padding-right: 30vh;
+	padding-left: 10vw;
+	padding-right: 10vw;
 		
 	}
 }
