--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -212,6 +212,26 @@ a:hover {
     font-weight: 300;
     letter-spacing: 1px;
 }
+/* Showcase Section */
+.showcase-text p{
+	font-size: 14px;
+	line-height: 20px;
+	color: #4a4e69;
+	font-weight: 300;
+}
+.showcase-text h3 {
+	font-size: 30px;
+	line-height: 33px;
+	color: #3fb0ac;
+	font-weight: 300;
+}
+.showcase-text h4 {
+	font-size: 18px;
+	line-height: 19px;
+	color: #4a4e69;
+	font-weight: 300;
+}
+/* End of Showcase Section */
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) { 
 #logo {
